Update rental workflow logic